feat: ticket resource and its relation to each team model
