# stuart/app/Models/User.php
@@ -50,4 +50,9 @@ class User extends Authenticatable
     {
         return $this->createToken('api')->plainTextToken;
     }
+
+    public function tickets(): \Illuminate\Database\Eloquent\Relations\HasMany
+    {
+        return $this->hasMany(Ticket::class, 'author_id');
+    }
 }
